fix(NoTicket): 页面新建动态表单项也用wrapComponent也用Card & 动态表单项添加按钮文案修改

--- a/src/components/Form/FormItem.less
+++ b/src/components/Form/FormItem.less
@@ -2,6 +2,7 @@
   position: relative;
   box-sizing: border-box;
   max-width: 1300px;
+  border-color: #d9d9d9;
 }
 
 .red {
